# ManiSkill

./: .gitignore  pyproject.toml
examples/baselines/act/: evaluate.py  train.py  train_rgbd.py
examples/baselines/act/act/: evaluate.py  make_env.py
examples/baselines/diffusion_policy/: evaluate.py  train.py  train_rgbd.py
examples/baselines/diffusion_policy/diffusion_policy/: evaluate.py  make_env.py
mani_skill/trajectory/: replay_trajectory.py
mani_skill/trajectory/utils/actions/: conversion.py
mani_skill/utils/wrappers/: record.py
scripts/eval/: evaluate.py
wandb/: settings
