[build-system]
requires = ["setuptools>=62.3.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
    "gpu_sim: marks tests as using the GPU simulation (deselect with '-m \"not gpu_sim\"')",
    "serial",
]
[tool.pixi.workspace]
name = "ManiSkill"
channels = ["pytorch", "nvidia", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mani_skill = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "==3.9"
setuptools = ">=80.9.0,<81"
tensorboard = ">=2.11.2,<3"
diffusers = ">=0.26.3,<0.30"
wandb = ">=0.19.1,<0.20"
pytorch-cuda = "11.8.*"
pytorch = ">=2.0"
protobuf = "<4.0"


[tool.pixi.tasks]
# 模倣学習用実演データのDL
# https://maniskill.readthedocs.io/en/latest/user_guide/learning_from_demos/setup.html
download_demo = { cmd = [
    "python",
    "-m",
    "mani_skill.utils.download_demo",
    "\"PickCube-v1\"",
]}
# データのインストール（解凍）
#install_demo = { cmd = "./replay_for_il_baselines.sh", cwd = "scripts/data_generation" }
install_demo = { cmd = [
  "python", "-m", "mani_skill.trajectory.replay_trajectory",
  "--traj-path", "~/.maniskill/demos/PickCube-v1/motionplanning/trajectory.h5",
  "--use-first-env-state", "-c", "pd_ee_delta_pos", "-o", "state",
  "--save-traj", "--num-envs", "10", "-b", "physx_cpu",
], cwd = "" }
# RGB観測形式のデータ生成（train_dp_rgbd の前に実行が必要）
install_demo_rgb = { cmd = [
  "python", "-m", "mani_skill.trajectory.replay_trajectory",
  "--traj-path", "~/.maniskill/demos/PickCube-v1/motionplanning/trajectory.h5",
  "--use-first-env-state", "-c", "pd_ee_delta_pos", "-o", "rgb",
  "--save-traj", "--num-envs", "10", "-b", "physx_cpu",
], cwd = "" }

# 模倣学習（diffusion policy）
# https://github.com/AmaneYamaguchi/ManiSkill/tree/main/examples/baselines/diffusion_policy
train_dp_rgb = { cmd = [
    "python",
    "train_rgbd.py",
    "--env-id", "PickCube-v1",
    "--demo-path", "~/.maniskill/demos/PickCube-v1/motionplanning/trajectory.rgb.pd_ee_delta_pos.physx_cpu.h5",
    "--control-mode", "\"pd_ee_delta_pos\"", "--sim-backend", "\"physx_cpu\"", "--num-demos", "{{demos}}", "--max_episode_steps", "100",
    "--total_iters", "30000", "--obs-mode", "rgb",
    "--exp-name", "diffusion_policy-PickCube-v1-rgb-{{demos}}_motionplanning_demos-{{seed}}",
    "--track",
], args = [
    { "arg" = "demos", "default" = "100" },
    { "arg" = "seed", "default" = "1" },
], cwd = "examples/baselines/diffusion_policy" }

train_dp = { cmd = [
    "python",
    "train.py",
    "--env-id", "PickCube-v1",
    "--demo-path", "~/.maniskill/demos/PickCube-v1/motionplanning/trajectory.state.pd_ee_delta_pos.physx_cpu.h5",
    "--control-mode", "\"pd_ee_delta_pos\"", "--sim-backend", "\"physx_cpu\"", "--num-demos", "{{demos}}", "--max_episode_steps", "100",
    "--total_iters", "30000",
    "--exp-name", "diffusion_policy-PickCube-v1-state-{{demos}}_motionplanning_demos-{{seed}}",
    "--no_capture_video",
    "--track", # wandbでトラッキングする場合はonにする
], args = [
    { "arg" = "demos", "default" = "1000" },
    { "arg" = "seed", "default" = "1" },
], cwd = "examples/baselines/diffusion_policy" }

# 評価用（state: train_dp のチェックポイント）
# 例: pixi run eval_dp demos=1000 seed=1 tag=best_eval_success_once
eval_dp = { cmd = [
    "python",
    "evaluate.py",
    "--checkpoint", "runs/diffusion_policy-PickCube-v1-state-{{demos}}_motionplanning_demos-{{seed}}/checkpoints/{{tag}}.pt",
    "--env-id", "PickCube-v1",
    "--obs-mode", "state",
    "--control-mode", "\"pd_ee_delta_pos\"",
    "--sim-backend", "\"physx_cpu\"",
    "--max-episode-steps", "100",
    "--num-eval-episodes", "100",
    "--num-eval-envs", "10",
], args = [
    { "arg" = "demos", "default" = "1000" },
    { "arg" = "seed", "default" = "1" },
    { "arg" = "tag", "default" = "best_eval_success_once" },
], cwd = "examples/baselines/diffusion_policy" }

# 評価用（RGB: train_dp_rgb のチェックポイント）
# 例: pixi run eval_dp_rgb demos=100 seed=1 tag=best_eval_success_once
eval_dp_rgb = { cmd = [
    "python",
    "evaluate.py",
    "--checkpoint", "runs/diffusion_policy-PickCube-v1-rgb-{{demos}}_motionplanning_demos-{{seed}}/checkpoints/{{tag}}.pt",
    "--env-id", "PickCube-v1",
    "--obs-mode", "rgb",
    "--control-mode", "\"pd_ee_delta_pos\"",
    "--sim-backend", "\"physx_cpu\"",
    "--max-episode-steps", "100",
    "--num-eval-episodes", "100",
    "--num-eval-envs", "10",
], args = [
    { "arg" = "demos", "default" = "100" },
    { "arg" = "seed", "default" = "1" },
    { "arg" = "tag", "default" = "best_eval_success_once" },
], cwd = "examples/baselines/diffusion_policy" }
